LP2080884 Dark mode for staff: MARC editor fixes
Restores the 3.13 color scheme for the new MARC editor in light mode.

--- a/Open-ILS/src/eg2/src/app/staff/catalog/record/record.component.css
+++ b/Open-ILS/src/eg2/src/app/staff/catalog/record/record.component.css
@@ -1,5 +1,5 @@
 #marcEditor {
-  background-color: var(--bs-body-bg-alt);
+  background-color: light-dark(hsla(223, 25%, 91%, 1), var(--bs-body-bg-alt));
 }
 
 .nav-tabs li h2 {
