--- a/Open-ILS/src/eg2/src/app/staff/share/marc-edit/flat-editor.component.css
+++ b/Open-ILS/src/eg2/src/app/staff/share/marc-edit/flat-editor.component.css
@@ -5,9 +5,5 @@
 .flat-editor-content {
     font-family: monospace; 
     display: inline-block; 
-    /*
-    min-width: 1ch; 
-    margin: 0 -1px; 
-    */
-    padding: 0;
+    padding: 0.375rem;
 }
